<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".about.AboutActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:contentPadding="16dp"
                app:cardElevation="4dp"
                android:id="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/splash_vector"
                        android:id="@+id/imageView3"/>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="right">

                    <TextView
                            android:text="@string/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView6"
                            android:textAppearance="@style/TextAppearance.AppCompat"
                            android:textColor="#ffffff"
                            android:textSize="32sp"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:textAlignment="textStart"
                            android:gravity="center_horizontal"/>

                    <TextView
                            android:text="@string/splash_developer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView7"
                            android:textSize="18sp"
                            android:textStyle="bold|italic"
                            android:textColor="#ffffff"/>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
                android:text="@string/about_signature_violation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signed_text"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="24sp"/>

        <TextView
                android:text="@string/about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

        <Button
                android:text="@string/about_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:onClick="rateApp"/>

        <TextView
                android:text="@string/about_debug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/debug_text"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

        <TextView
                android:text="@string/about_developer_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:text="@string/about_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView17"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

        <TextView
                android:text="@string/about_legal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:text="@string/splash_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:text="@string/about_distributor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

        <TextView
                android:text="@string/about_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:text="@string/about_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_marginBottom="8dp"/>

        <Button
                android:text="@string/about_license_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:onClick="openLicense"/>

        <TextView
                android:text="@string/about_license_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:text="@string/about_signed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:text="@string/about_violation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textAllCaps="true"/>

    </LinearLayout>
</ScrollView>