<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_mode_error"
            android:paddingBottom="8dp"
            android:textColor="@color/red_tint"
            tools:text="[error message]"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_mode_name"
                android:textStyle="bold"
                android:id="@+id/edit_mode_title"
                android:text="@string/txt_custom"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_info_size"
                android:tint="#607d8b"
                android:paddingEnd="8dp"
                android:contentDescription="@string/null_name"
                android:paddingTop="8dp"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_mode_width"
                    android:id="@+id/edit_mode_width"
                    android:text="9"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
                android:text="@string/times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_mode_height"
                    android:id="@+id/edit_mode_height"
                    android:text="9"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_info_mines"
                android:paddingEnd="8dp"
                android:contentDescription="@string/null_name"
                android:paddingTop="8dp"
                android:tint="#f44336"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_mode_mines"
                    android:id="@+id/edit_mode_mines"
                    android:text="10"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</LinearLayout>