<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/dialog_lose_found"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/msg"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"/>

    <TextView
            android:text="@string/dialog_lose_revealed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/revealed_name"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/msg"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

    <TextView
            android:text="@string/dialog_lose_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/revealed"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/msg"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/revealed_bar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:progressTint="@color/colorAccent"
            android:max="100"
            android:progress="50"
            android:indeterminateTint="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/revealed_name"/>

</android.support.constraint.ConstraintLayout>